[package]
name = "get402-rust"
version = "0.0.1"
edition = "2021"
description = "Client Ror Building Paid APIs Using Get402.com"
license-file = "LICENSE.md"
documentation = "https://get402.com/docs.html"
homepage = "https://get402.com"
repository = "https://github.com/ProofOfWorkCompany/get402-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
