[package]
name = "get402"
version = "0.0.2"
edition = "2021"
description = "Client For Building Paid APIs Using Get402.com"
license-file = "LICENSE.md"
documentation = "https://get402.com/docs.html"
homepage = "https://get402.com"
repository = "https://github.com/ProofOfWorkCompany/get402-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
