[package]
name = "get402"
version = "0.1.1"
edition = "2021"
description = "Client For Building Paid APIs Using Get402.com"
license-file = "LICENSE.md"
documentation = "https://get402.com/docs.html"
homepage = "https://get402.com"
repository = "https://github.com/ProofOfWorkCompany/get402-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sv = { version = "0.2" }
bitcoin = { version = "0.27.1" }
secp256k1 = { version = "0.21.2", features = ["rand", "bitcoin_hashes"] }
rand = { version = "0.6", features = ["std"] }
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = "0.10.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
bitcoin_hashes = "0.9.4"
